# rdy2serve

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
clients/: README.md
clients/api/: Cargo.toml
clients/api/src/: lib.rs
clients/leptos/: Cargo.toml  README.md  Trunk.toml  index.html
clients/leptos-client/: Cargo.toml  README.md  index.html  input.css  rust-toolchain.toml  tailwind.config.js
clients/leptos-client/src/: lib.rs  main.rs
clients/leptos-client/style/: output.css
clients/leptos/src/: app.rs  lib.rs  main.rs
clients/leptos/src/components/: inputs.rs
clients/leptos/style/: output.css
clients/sveltekit/: package-lock.json  package.json  vite.config.ts
clients/sveltekit/src/lib/: Leptos.svelte  Ping.svelte  index.js
clients/sveltekit/src/lib/chat/: Chat.svelte
clients/sveltekit/src/routes/: +page.svelte
clients/sveltekit/static/: output.css
rtc-server/: Cargo.toml  README.md
rtc-server/src/: behaviour.rs  lib.rs  main.rs
src/: main.rs
websys-webrtc-transport/: Cargo.toml  README.md
websys-webrtc-transport/src/: lib.rs
