[package]
name = "rdy2serve"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  # "clients/leptos",
  "rtc-server"
]

[dependencies]
anyhow = "1.0.69"
rtc-server = { path = "rtc-server" }
tokio = "1.26.0"
log = "0.4.17"
env_logger = "0.10.0"
bytes = "1"

[profile.release]
# opt-level = 2 # fast and small wasm // 2.905MB
opt-level = 'z' # optimize for size instead of speed // 2.51 MB
# opt-level = "s" # optimize for size instead of speed // 2.597 MB
lto = true

[profile.dev]
debug = 2
opt-level = 0