[package]
name = "rdy2serve"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["clients/leptos-client", "rtc-server", "websys-webrtc-transport"]
resolver = "2"                                                               # https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions

[workspace.dependencies]
websys-webrtc-transport = { path = "websys-webrtc-transport" }

[dependencies]
anyhow = "1.0.69"
rtc-server = { path = "rtc-server" }
tokio = "1.26.0"
log = "0.4.17"
env_logger = "0.10.0"
bytes = "1"

[profile.release]
# opt-level = 2 # fast and small wasm // 2.905MB
opt-level = 'z' # optimize for size instead of speed // 2.51 MB
# opt-level = "s" # optimize for size instead of speed // 2.597 MB
lto = true

[profile.dev]
debug = 2
opt-level = 0

[patch.crates-io]
libp2p = { git = "https://github.com/vnermolaev/rust-libp2p.git", branch = "deprecate/gossipsub-close-event", version = "*" } # debugging https://github.com/libp2p/rust-libp2p/pull/3625
# libp2p = { path = "../rust-libp2p/libp2p" } # to insert more debug logs
