[package]
name = "rtc-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.0.18", features = ["derive"] }
futures = "0.3.26"
rand = "0.8.5"
void = "1.0.2"
tokio = { version = "1.19", features = ["full"] }
log = "0.4.17"
bytes = "1"
tracing = "0.1.34"

[dependencies.libp2p]
version = "0.51.1"
features = [
    "gossipsub",
    "identify",
    "macros",
    "noise",
    "tokio",
    "ping",
    "webrtc"
    ]
