[package]
name = "websys-webrtc-transport"
version = "0.1.0"
authors = ["Doug Anderson"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.34"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "MessageEvent",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcDataChannel",
    "RtcDataChannelEvent",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
